# aton

./: .gitignore  Makefile  README.md  db_init.py  pyproject.toml
aton_test/: app.py  data_base.py  utils.py
static/scripts/: clientsList.js
static/styles/: clients_list.css  style.css
templates/: main_layout.html
templates/pages/: client_list.html  login.html
